@@ -10,6 +10,7 @@ Release 1.0.7
 * add clean_merging option to remove duplicated spikes in pairs during meta merging
 * fix the info function in the launcher
 * fix for common ground if only one shank
+* adaptive global maximal amplitude for every templates
 
 =============
 Release 1.0.6
